[metadata]
name = dbtbetclicpkg
version = 0.0.2
author = Raphaël Macquet
author_email = raphael@dataship.tech
description = Python package for pre-commit hooks
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Dataship-Tech/captain-hook
project_urls =
    repository = https://github.com/Dataship-Tech/captain-hook
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    divide-by-three = src:divide_by_three